add Marionette application

--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
   <script src="./assets/javascript/vendor/underscore.js"></script>
   <script src="./assets/javascript/vendor/backbone.js"></script>
   <script src="./assets/javascript/vendor/backbone.marionette.js"></script>
+  
+  <!-- Application core (Order matters) -->
+  <script type="text/javascript" src="assets/javascript/app.js"></script>
+
+  <script type="text/javascript">
+    MyApp.start();
+  </script>
 </body>
 </html>
