attach search view to layout

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <!-- Application core (Order matters) -->
   <script type="text/javascript" src="assets/javascript/app.js"></script>
   <script type="text/javascript" src="assets/javascript/app.library_app.js"></script>
+  <script type="text/javascript" src="assets/javascript/app.library_app.book_list.js"></script>
 
   <script type="text/javascript">
     MyApp.start();
