implement routing and history

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <script type="text/javascript" src="assets/javascript/app.js"></script>
   <script type="text/javascript" src="assets/javascript/app.library_app.js"></script>
   <script type="text/javascript" src="assets/javascript/app.library_app.book_list.js"></script>
+  <script type="text/javascript" src="assets/javascript/app.library_app.routing.js"></script>
 
   <script type="text/javascript">
     MyApp.start();
