--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
   <h1 class="title">Backbone.js Books</h1>
 
+  <div id="credits">
+    Written by <a href="http://davidsulc.com">David Sulc</a>, based on the <a href="http://www.atinux.fr/backbone-books/">original application</a> by <a href="http://www.atinux.fr">Atinux</a>.
+  </div>
+
   <div id="menu">
     <a href="#" class="js-menu-books">Books</a>
     <a href="#close" class="js-menu-close">Close</a>
