update to use HTTPS locations to avoid mixed content warnings
Github now serves pages from https.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <title>Backbone.js Books - Google Books API and Backbone.js</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/bootstrap-modal.css">
-  <link href="http://fonts.googleapis.com/css?family=Sofia" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet" type="text/css">
 </head>
+
 <body>
   <h1 class="title">Backbone.js Books</h1>
 
   <div id="credits">
-    Written by <a href="http://davidsulc.com">David Sulc</a>, based on the <a href="http://www.atinux.fr/backbone-books/">original application</a> by <a href="http://www.atinux.fr">Atinux</a>.
+    Written by <a href="http://davidsulc.com">David Sulc</a>, based on the <a
+      href="http://www.atinux.fr/backbone-books/">original application</a> by <a href="http://www.atinux.fr">Atinux</a>.
   </div>
 
   <div id="menu">
@@ -41,18 +44,18 @@
   </script>
 
   <script type="text/template" id="book-template">
-    <img src="<%= (thumbnail ? thumbnail : 'http://placehold.it/100x150') %>" alt="" class="book" />
+    <img src="<%= (thumbnail ? thumbnail : 'https://placehold.it/100x150') %>" alt="" class="book" />
   </script>
 
   <script type="text/template" id="book-detail-template">
     <a class="close" data-dismiss="modal">x</a>
     <div class="imgBook">
-      <img src="<%= (thumbnail ? thumbnail : 'http://placehold.it/200x260') %>" />
+      <img src="<%= (thumbnail ? thumbnail : 'https://placehold.it/200x260') %>" />
     </div>
     <h1><%= title %></h1>
     <%= (subtitle ? '<h2>'+subtitle+'</h2>' : '') %>
     <p><%= (description ? description : 'No description found') %></p>
-    <b>Google link :</b> <a href="http://books.google.fr/books?id=<%= googleId %>" target="_blank">http://books.google.fr/books?id=<%= googleId %></a>
+    <b>Google link :</b> <a href="https://books.google.fr/books?id=<%= googleId %>" target="_blank">https://books.google.fr/books?id=<%= googleId %></a>
   </script>
 
   <script type="text/template" id="close-template">
@@ -60,13 +63,13 @@
   </script>
 
   <!-- Thirt-Party Libraries (Order matters) -->
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
   <script src="./assets/javascript/vendor/underscore.js"></script>
   <script src="./assets/javascript/vendor/backbone.js"></script>
   <script src="./assets/javascript/vendor/backbone.marionette.js"></script>
   <script src="./assets/javascript/vendor/bootstrap-modal.js"></script>
-  
+
   <!-- Application core (Order matters) -->
   <script type="text/javascript" src="assets/javascript/app.js"></script>
   <script type="text/javascript" src="assets/javascript/app.library_app.js"></script>
@@ -78,4 +81,5 @@
     MyApp.start();
   </script>
 </body>
+
 </html>
